# testing

./: Makefile  alembic.ini  example.env  pyproject.toml  pyrightconfig.json
docker_compose/: storages.yaml
src/core/: containers.py
src/core/configs/: __init__.py  database.py  general.py
src/domain/entities/: order.py  order_item.py  product.py
src/domain/exceptions/: base.py
src/domain/exceptions/services/: product.py
src/domain/services/: order.py  product.py
src/gateways/postgresql/: database.py
src/gateways/postgresql/migrations/: env.py
src/gateways/postgresql/migrations/versions/: 2836c87a81d9_init.py  8df7f07325f8_add_order_table.py
src/gateways/postgresql/models/: mixins.py  order.py  order_item.py  product.py
src/gateways/postgresql/repositories/: order.py  product.py
src/rest/: main.py
src/rest/orders/: handlers.py  schemas.py
src/rest/products/: handlers.py  schemas.py
